# Odysync

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES_v1.3.0.md  ROADMAP.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml  rust.yml
.windsurf/plans/: megaplan-bugfixes-and-features.md
apps/gui/: copy-to-desktop.mjs  index.html  package-lock.json  package.json  tailwind.config.js
apps/gui/src/: App.css  App.tsx  api.ts  events.ts  hardware-backends.ts  index.css  main.tsx  nav.tsx  store.tsx  types.ts
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/icons/: icon.icns
apps/gui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs
apps/gui/src/components/: ErrorBoundary.tsx  ui.tsx
apps/gui/src/pages/: About.tsx  Backup.tsx  Dashboard.tsx  Drivers.tsx  Hardware.tsx  History.tsx  Logs.tsx  Maintenance.tsx  Offline.tsx  Packages.tsx  Profiles.tsx  Schedule.tsx  Security.tsx  Settings.tsx  Startup.tsx  Updates.tsx
crates/odysync-backends/: Cargo.toml
crates/odysync-backends/src/: appimage.rs  apt.rs  autostart.rs  chocolatey.rs  diagnostics.rs  dnf.rs  firmware_backends.rs  flatpak.rs  fwupd.rs  homebrew.rs  lang_backends.rs  lib.rs  mac_firmware.rs  mac_software_update.rs  maintenance.rs  nix.rs  notifications.rs  offline.rs  pacman.rs  scheduler.rs  scoop.rs  snap.rs  virtualization_guest.rs  windows_drivers.rs  zypper.rs
crates/odysync-backends/src/gpu/: amd_gpu.rs  intel_gpu.rs  mod.rs  nvidia_gpu.rs  qualcomm_gpu.rs
crates/odysync-backends/src/oem/: acer_care_center.rs  asus_armoury.rs  dell_command_update.rs  gigabyte_control_center.rs  hp_image_assistant.rs  lenovo_system_update.rs  mod.rs  msi_center.rs  razer_synapse.rs
crates/odysync-backends/src/security/: defender.rs  integrity.rs  mod.rs  network.rs  persistence.rs  posture.rs  remediate.rs
crates/odysync-backends/src/winget/: mod.rs  table.rs
crates/odysync-cli/: Cargo.toml
crates/odysync-cli/src/: daemon.rs  main.rs  render.rs
crates/odysync-core/: Cargo.toml
crates/odysync-core/src/: backend.rs  config.rs  error.rs  health.rs  history.rs  lib.rs  maintenance.rs  model.rs  platform.rs  proc.rs  report.rs  restore.rs  runner.rs  scan_cache.rs
crates/odysync-verify/: Cargo.toml
crates/odysync-verify/src/: lib.rs  signature.rs
crates/odysync-version-source/: Cargo.toml
crates/odysync-version-source/src/: cache.rs  hybrid.rs  lib.rs  registry.rs  scraper.rs
crates/sensei-backends/: Cargo.toml
crates/sensei-backends/src/: apt.rs  diagnostics.rs  flatpak.rs  homebrew.rs  lib.rs  maintenance.rs  scheduler.rs  windows_drivers.rs
crates/sensei-backends/src/winget/: mod.rs
crates/sensei-cli/: Cargo.toml
crates/sensei-cli/src/: daemon.rs  main.rs  render.rs
crates/sensei-core/: Cargo.toml
crates/sensei-core/src/: backend.rs  config.rs  error.rs  lib.rs  maintenance.rs  model.rs  platform.rs  policy.rs  proc.rs  report.rs  runner.rs  version.rs
crates/sensei-verify/: Cargo.toml
crates/sensei-verify/src/: lib.rs  signature.rs
legacy/: pyproject.toml
src/sensei_updater/core/: process.py
src/sensei_updater/domain/: reports.py
src/sensei_updater/services/: apps_service.py  drivers_service.py
src/sensei_updater/ui/: main_window.py  styles.qss
src/sensei_updater/ui/pages/: apps_page.py  cycle_page.py  drivers_page.py  reports_page.py
