[workspace]
resolver = "2"
members = [
    "crates/odysync-core",
    "crates/odysync-verify",
    "crates/odysync-backends",
    "crates/odysync-cli",
    "apps/gui/src-tauri",
]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/SenseiIssei/Odysync"
authors = ["Jakob (SenseiIssei)"]

[workspace.dependencies]
odysync-core = { path = "crates/odysync-core" }
odysync-verify = { path = "crates/odysync-verify" }
odysync-backends = { path = "crates/odysync-backends" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "io-util", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
directories = "5"
async-trait = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
