[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odysync"
version = "1.2.0"
description = "Safe Windows driver and software updater with profiles, reports, diagnostics, scheduling, and TUI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.62.0"]

[project.scripts]
odysync = "odysync_updater.main:main"

[tool.setuptools.packages.find]
where = ["src"]