[package]
name = "odysync-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Domain model, safety policy and update planner for Odysync"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace = true
directories.workspace = true
tracing.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Restore",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "time", "fs", "io-util"] }
