[package]
name = "sensei-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command line interface for Sensei's Updater"

[[bin]]
name = "sensei"
path = "src/main.rs"

[dependencies]
sensei-core.workspace = true
sensei-backends.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
