[package]
name = "odysync-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# Not published to crates.io; also lets cargo-deny's allow-wildcard-paths
# apply to our path dependencies on each other.
publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Odysync GUI (Tauri v2)"

[lib]
name = "odysync_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
odysync-core = { workspace = true }
odysync-backends = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
chrono = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
directories = { workspace = true }
